# warden

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  book.toml  build.rs  test_input.json
.github/workflows/: ci.yml  docs.yml  release-prep.yml  release-ship.yml  release.yml  tag-release.yml
.warden/: rules.toml
docs/: README.md  SUMMARY.md  architecture.md  assistant-adapters.md  claims.yaml  commands.md  compatibility.md  configuration.md  context-efficiency.md  contributing.md  faq.md  feature-maturity.md  installation.md  pipeline-stages.md  rules-guide.md  runtime-control.md  session-intelligence.md  troubleshooting.md  why-warden.md
docs/examples/: config.toml  personal-liel.toml  personal-rules.toml  project-rules.toml  quick-start.md
docs/theme/: custom.css
examples/: test_select.rs
plugins/claude-code/.claude-plugin/: plugin.json
plugins/claude-code/hooks/: settings.json
plugins/gemini-cli/: gemini-extension.json
rules/: community.toml  core.toml
schemas/: config.schema.json  rules.schema.json
scripts/: check_docs_parity.py
src/: benchmark.rs  constants.rs  daemon.rs  dispatch.rs  dream.rs  ipc.rs  main.rs  scorecard.rs
src/analytics/: anomaly.rs  cost.rs  dna.rs  effectiveness.rs  entropy.rs  error_prevention.rs  focus.rs  forecast.rs  goal.rs  loop_patterns.rs  markov.rs  mod.rs  negative_memory.rs  quality.rs  recovery.rs  trust.rs  verification.rs
src/assistant/: claude_code.rs  gemini_cli.rs  mod.rs
src/cli/: mod.rs
src/common/: events.rs  io.rs  mod.rs  output.rs  sanitize.rs  scratch.rs  session.rs  shell_parse.rs  storage.rs  subprocess.rs  types.rs  util.rs
src/config/: mod.rs  parser.rs  restrictions.rs
src/config/core/: advisories.rs  auto_allow.rs  commands.rs  (+13 more)
src/engines/: mod.rs  signal.rs  signal_bus.rs
src/handlers/: adaptation.rs  auto_changelog.rs  config_override.rs  cross_session.rs  describe.rs  explain.rs  export_sessions.rs  git_guardian.rs  git_summary.rs  learning.rs  mcp_server.rs  mod.rs  permission_approve.rs  postcompact.rs  postfailure_guide.rs  posttool_mcp.rs  precompact_memory.rs  pretool_read.rs  pretool_redirect.rs  pretool_write.rs  proc_mgmt.rs  replay.rs  session_end.rs  session_start.rs  smart_filter.rs  stop_check.rs  subagent_context.rs  subagent_stop.rs  task_completed.rs  token_budget.rs  truncate_filter.rs  tui.rs  userprompt_context.rs
src/install/: detect.rs  mod.rs  path.rs  term.rs  tools.rs  uninstall.rs  update.rs  wizard.rs
src/pipeline/: context.rs  mod.rs
src/rules/: mod.rs  schema.rs
src/runtime/: daemon.rs  dispatch.rs  ipc.rs  mod.rs  server.rs
tests/: compass_e2e.rs  dream_tests.rs  integration.rs  intelligence_fixtures.rs  perf.rs  precompact_tests.rs  schema_validation.rs  scorecard_tests.rs  session_e2e.rs  simulation.rs  test_install.js  upgrade_compat.rs  version_consistency.rs
tests/traces/: adversarial.jsonl  compaction.jsonl  compression_heavy.jsonl  healthy.jsonl  long_session.jsonl  multi_subsystem.jsonl  policy_heavy.jsonl  read_heavy.jsonl  struggling.jsonl
(+57 files in other folders)
