[package]
name = "warden"
version = "1.0.0"
edition = "2024"
description = "Harness engineering for AI coding agents — runtime safety, intelligence, and governance for Claude Code, Gemini CLI, and more"
license = "MIT"
repository = "https://github.com/ekud12/warden"
homepage = "https://github.com/ekud12/warden"
documentation = "https://github.com/ekud12/warden/tree/main/docs"
readme = "README.md"
keywords = ["ai-safety", "claude-code", "coding-agent", "hooks", "guardrails"]
authors = ["Liel Kaysari <ekud12>"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
toml = "0.8"
ratatui = "0.29"
crossterm = "0.28"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_Security",
] }

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
# panic = "abort" — REMOVED: catch_unwind in daemon.rs and main.rs requires unwinding

[[bin]]
name = "warden"
path = "src/main.rs"

