[package]
name = "warden-ai"
version = "2.8.0"
edition = "2024"
description = "Runtime control layer for AI coding agents: policy enforcement, drift reduction, and context efficiency"
license = "AGPL-3.0-only"
repository = "https://github.com/ekud12/warden"
homepage = "https://github.com/ekud12/warden"
documentation = "https://github.com/ekud12/warden/tree/main/docs"
readme = "README.md"
keywords = ["runtime-control", "ai-agent", "coding-agent", "policy-enforcement", "session-intelligence"]
authors = ["Liel Kaysari <ekud12>"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
toml = "0.8"
ratatui = "0.29"
crossterm = "0.28"
redb = "3"
dashmap = "6"
compact_str = { version = "0.9", features = ["serde"] }
smallvec = { version = "1", features = ["serde"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_IO",
    "Win32_System_Threading",
    "Win32_System_Pipes",
    "Win32_Security",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[features]
default = []
semantic = ["candle-core", "tokenizers"]

[dependencies.candle-core]
version = "0.9"
optional = true

[dependencies.tokenizers]
version = "0.21"
optional = true

[dev-dependencies]
tempfile = "3"
serde_json = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
# panic = "abort" — REMOVED: catch_unwind in daemon.rs and main.rs requires unwinding

[[bin]]
name = "warden"
path = "src/main.rs"

[[bin]]
name = "warden-relay"
path = "src/bin/relay.rs"


